<resources>
    <string name="app_name">Book Tracker</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Book Tracker by Oluwasanmi Aderibigbe</string>
    <string name="nav_header_subtitle">sanmiaderibigbe@outlook.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_reading">READING</string>
    <string name="nav_read">READ</string>
    <string name="nav_to_read">TO READ</string>
    <string name="nav_goals">GOALS</string>
    <string name="nav_statistics">STATISTICS</string>
    <string name="to_read">TO READ</string>
    <string name="read">READ</string>
    <string name="goals">GOALS</string>
    <string name="statistics">STATISTICS</string>
    <string name="search_for_book">Search for book</string>
    <string name="search">SEARCH</string>
    <string name="manual">MANUAL</string>
    <string name="cancel">CANCEL</string>
    <string name="move_to_read">Move to read</string>
    <string name="move_to_read_later">Move to read later</string>
    <string name="share_book">Share</string>
    <string name="delete">Delete</string>
    <string name="move_to_reading">Move to reading</string>
    <string name="cancel_move_to_read">cancel</string>
    <string name="okay">OKAY</string>
    <string name="books_read">BOOKS READ</string>
    <string name="books_to_read">BOOKS TO READ</string>
    <string name="reading">READING</string>
    <string name="book_progress">Update Progress</string>
    <string name="update_book_progress">Update Book Progress</string>
</resources>
