<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_reading"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/reading" />
        <item
            android:id="@+id/nav_to_read"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/to_read" />
        <item
            android:id="@+id/nav_read"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/read" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/goals" />

        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/statistics" />
    </group>



</menu>
